# tcas

./: .gitignore  pyproject.toml
coverage/gremlins/: history.json  index.html
src/tcas/: main.py  state.py
test/clause/: test_dracup_clause.py
test/tcas/: test_altitude_separation_test.py
test/tcas/predicate/: test_dracup_predicate.py
